Made the "apply" button align correctly on settings page.

--- a/Game/UIs/css/style.css
+++ b/Game/UIs/css/style.css
@@ -102,6 +102,10 @@ body {
   font-size: 1.25em;
 }
 
+#settings-form {
+  width: 50%;
+}
+
 #start-game {
   border-radius: 100%;
   width: 4.5em;
